// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoreOrLess renders correctly when expanded 1`] = `
<div
  className="more-or-less more fancy-class-name"
  style={
    Object {
      "alignItems": undefined,
      "boxSizing": "border-box",
      "display": "flex",
      "flex": "0 0 auto",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "height": undefined,
      "justifyContent": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "minHeight": 0,
      "minWidth": 0,
      "width": undefined,
    }
  }
>
  content
  <div
    className="expand-button"
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "boxSizing": "border-box",
        "display": "flex",
        "flex": "0 0 auto",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "height": undefined,
        "justifyContent": "center",
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "minHeight": 0,
        "minWidth": 0,
        "width": undefined,
      }
    }
  >
    angle-up
  </div>
</div>
`;

exports[`MoreOrLess renders correctly when not expanded 1`] = `
<div
  className="more-or-less less fancy-class-name"
  style={
    Object {
      "alignItems": undefined,
      "boxSizing": "border-box",
      "display": "flex",
      "flex": "0 0 auto",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "height": undefined,
      "justifyContent": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "minHeight": 0,
      "minWidth": 0,
      "width": undefined,
    }
  }
>
  content
  <div
    className="expand-button"
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "boxSizing": "border-box",
        "display": "flex",
        "flex": "0 0 auto",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "height": undefined,
        "justifyContent": "center",
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "minHeight": 0,
        "minWidth": 0,
        "width": undefined,
      }
    }
  >
    angle-down
  </div>
</div>
`;
